# Agent_Memory

./: .gitignore  DEPLOY_TRANSPORT_BRIDGE.md  ENTRY_START_HERE.md  GIT_BOUNDARY.md  README.md  RELEASE_NOTES_v1.md  RUNBOOK_BRIDGE_NOTION.md  START_SETUP.bat  pyproject.toml  requirements.txt  retrieval_benchmark_cases.example.yaml  retrieval_benchmark_cases_phase4.example.yaml
agent_memory/: __init__.py  __main__.py  attachment_ingest.py  auto_evolve.py  brain_template.py  bridge_outbox.py  bridge_service.py  channel_bindings.py  chat_runtime.py  chat_session.py  cli.py  config.py  context_compaction.py  curator.py  dashboard_server.py  dialogue_modes.py  embedding_client.py  entity_extract.py  external_ingest_summarize.py  folder_allocator.py  folder_labels.py  gap_analysis.py  hooks.py  llm_client.py  llm_ledger.py  llm_routing.py  llm_text_helpers.py  local_tools.py  memory_capture.py  memory_promotion.py  notion_queue.py  observability_views.py  persona_factory.py  persona_governance.py  persona_portability.py  profile_scope.py  provider.py  recent_updates.py  reflect.py  retrieval_benchmark.py  (+17 more)
docs/: FULL_CONTEXT_PROMPT_PACKET_BUILDER_SPEC.md  V3-O.15.4_message_id_dedup_cross_platform.md  V3-O.4_to_O.5_transition_record_2026-05-28.md  第4次重生_V3-O.5_FullContextPacket_2026-05-28.txt  第4次重生_V3-O.5總結_2026-05-28.md  第5次重生交接_V3-O.6_2026-05-28.md  第5次重生交接prompt_V3-O.6_2026-05-28.md  第7次重生_V3-O.11_驗收與第8次重生待查清單.md  第8次重生交接prompt_V3-O.11_2026-05-30.md
scripts/: _dotenv-helper.ps1  _dump_viewer_prompt.py  _set_llm_router.py  agent-memory-daemon.ps1  audit_v3o10_round6.py  (+44 more)
(+221 files in other folders)
